# Neurophonia

./: Impulsion.tidal  OtoZigguratz.tidal  README.md  SYNTH  data.tidal  variables.tidal
datasets/: datasets.cabal
datasets/src/Sound/Tidal/BS/: geometrism.hs
